# api-boilerplate

./: .flake8  Dockerfile  LICENSE.txt  alembic.ini  api.py  db_init.env  docker-compose.yml  models.py  pyproject.toml  readme.md  schemas.py
app/: .flake8  __init__.py  alembic.ini  api.py  models.py  pyproject.toml
app/api/: api.py  models.py
app/api/migrations/: env.py
app/api/migrations/versions/: README.md
app/data/: db.py  models.py
app/data/migrations/: env.py
git-hooks/: pre-commit
migrations/: env.py
