[tool.poetry]
name = "api-boilerplate"
version = "0.1.0"
description = ""
authors = ["Alex Baker <hello@alexbaker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.59.0"
uvicorn = "0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
