[tool.poetry]
name = "api-boilerplate"
version = "0.1.0"
description = ""
authors = ["Alex Baker <hello@alexbaker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.59.0"
uvicorn = "0.11.5"
sqlalchemy = "^1.3.18"
psycopg2-binary = "^2.8.5"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
flake8-quotes = "^3.2.0"
mypy = "^0.782"
alembic = "^1.4.2"
autopep8 = "^1.5.3"
flake8-docstrings = "^1.5.0"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
